functionality has been established. time to set media queries

--- a/public/index.html
+++ b/public/index.html
@@ -20,9 +20,12 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet">
+    <link rel="stylesheet" href="../src/App.css">
+    <link href="https://fonts.googleapis.com/css?family=Work+Sans:400,500,600,700" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
       crossorigin="anonymous">
-    <title>React App</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <title>GetDo Travel Planner</title>
   </head>
   <body>
     <noscript>
@@ -39,5 +42,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+  <footer>
+    <p>© 2018 Moin Gani
+    <span>Continue your trip-planning with <a href="https://susiekims.github.io/susie-moin_project4/index.html">GetGo <i class="fas fa-plane"></i></a></span></p>
+  </footer>
   </body>
 </html>
